--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,49 @@
+body {
+  margin-top: 5vmax;
+}
+
 .App {
+  font-size: 16px;
+
+  display: grid;
+  grid-template-columns: 33vw 34vw 33vw;
+}
+
+.username {
+  color: blue;
+  font-weight: bolder;
+}
+
+#conversation {
+  background-color: #E8E8E8;
+  height: 45vh;
+  border-radius: 30px;
+  padding: 2vmax;
+}
+
+#MessageInput {
   text-align: center;
+
+  background-color: #C8C6C6;
+  border-radius: 30px;
+
+  margin-top: 1vmin;
+  padding: 1vmin;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+
+#AppContainer {
+  grid-column: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type=text], textarea {
+  text-align: center;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  width: 30vw;
 }
 
-.App-link {
-  color: #61dafb;
-}
+textarea {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
