formatted admin messages to be italic/centered

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,12 @@ body {
 }
 
 .username {
-  color: blue;
   font-weight: bolder;
+}
+
+.adminMessage {
+  text-align: center;
+  font-style: italic;
 }
 
 #conversation {
