--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 body {
-  margin-top: 5vmax;
+  /* margin: 5vmax; */
+  /* background-color: red; */
 }
 
 .App {
   font-size: 16px;
 
   display: grid;
-  grid-template-columns: 33vw 34vw 33vw;
+  grid-template-columns: 200px 80vw;
 }
 
 .username {
@@ -22,7 +23,8 @@ body {
   background-color: #E8E8E8;
   height: 45vh;
   border-radius: 30px;
-  padding: 2vmax;
+  padding-left: 1vmin;
+  padding-right: 1vmin;
   overflow: auto;
 }
 
@@ -32,24 +34,54 @@ body {
   background-color: #C8C6C6;
   border-radius: 30px;
 
+
   margin-top: 1vmin;
   padding: 1vmin;
+}
+
+#ActiveUsersContainer {
+  grid-column: 1;
+  padding: 1vmin;
+  margin-right: 1vmin;
+}
+
+#AppContainer {
+  grid-column: 2;
+  padding: 1vmin;
+  min-width: 500px;
+  max-width: 70%;
+
+}
+
+#ActiveUsers {
+
+  background-color: #E4E4E4;
+
+  width: 100%;
+
+  height: 50vh;
+
+  padding: 1vmin;
+
+  border-radius: 30px;
 }
 
 #usernameBold {
   font-weight: bold;
 }
 
-#AppContainer {
-  grid-column: 2;
+.subtitle {
+  font-weight: bold;
+  text-align: center;
 }
+
 
 input[type=text], textarea {
   text-align: center;
   border: none;
   border-radius: 10px;
   font-size: 18px;
-  width: 30vw;
+  width: 95%;
   margin: 2px;
 }
 
